tests/baselines/reference/parserTypeQuery5.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery5.ts] ////

parserTypeQuery5.ts(1,15): error TS2304: Cannot find name 'A'.


==== parserTypeQuery5.ts (1 errors) ====
    var v: typeof A.B
                  ~
!!! error TS2304: Cannot find name 'A'.